apps/rancher-support/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher-proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      REDACTED/rancher: proxy
  template:
    metadata:
      labels:
        REDACTED/rancher: proxy
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
              readOnly: true
            - name: tls
              mountPath: /etc/tls
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: rancher-proxy
        - name: tls
          secret:
            secretName: tls-rancher-proxy
