apps/rancher-support/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rancher-proxy
  namespace: cattle-system
spec:
  selector:
    xxx/rancher: proxy
  ports:
    - name: https
      port: 443
      targetPort: 8443
