apps/rancher-support/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rancher-proxy
  namespace: cattle-system
spec:
  hostnames:
  - REDACTED
  parentRefs:
  - name: netbird-public
    namespace: netbird
  rules:
    - backendRefs:
        - name: rancher
          port: 80
